--- a/librum-db-pvc.yml
+++ b/librum-db-pvc.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: librum
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
